--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,6 +77,7 @@
 #backimg {
     width: 100%;
     margin: 0%;
+    position: static;
 }
 #exp {
     width: 12px;
@@ -92,7 +93,9 @@
 }
 .main {
     width: 100%;
+    position: static;
 }
+
 
 .footer {
     height: 372px;
