--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,7 +9,8 @@
     left: 0px;
     top: 0px;
     background-color: white; 
-    display: -webkit-flex;  
+    display: -webkit-flex;
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);  
 }
 .logo {
     display: flex;
@@ -81,7 +82,8 @@
 #backimg {
     width: 100%;
     margin: 0%;
-    position: static;
+    position: relative;
+    top: 61px;
 }
 #exp {
     width: 12px;
