--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 .header, .body, .footer {
     min-width: 1150px;
 }
-
+/* header */
 .header {
     position: absolute;
     width: 100%;
@@ -79,6 +79,18 @@
     color: #FFFFFF;
     border: 2px solid #BC9CFF;
 }
+/* body */
+
+.window {
+    width: 200px;
+    height: 250px;
+    background-color: white;
+    border: 2px solid black;
+    position: absolute;
+    top: 200px;
+    left: 140px;
+}
+
 #backimg {
     width: 100%;
     margin: 0%;
@@ -99,10 +111,10 @@
 }
 .main {
     width: 100%;
-    position: static;
+    position: relative;
 }
 
-
+/* FOOTER */
 .footer {
     height: 372px;
     width: 100%;
