add window content

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,13 +82,32 @@
 /* body */
 
 .window {
-    width: 200px;
-    height: 250px;
-    background-color: white;
-    border: 2px solid black;
     position: absolute;
-    top: 200px;
+    width: 380px;
+    height: 374px;
     left: 140px;
+    top: 140px;
+
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+.title_window {
+    padding: 40px 30px 30px;
+}
+.date {
+
+}
+.date input {
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    width: 150px;
+    height: 44px;
+    margin-left: 30px;
 }
 
 #backimg {
