--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,6 @@
 .header, .body, .footer {
     min-width: 1150px;
+    max-width: 1920px;
 }
 /* header */
 .header {
@@ -139,6 +140,7 @@
     width: 100%;
     display: -webkit-flex;
     flex-direction: row;
+    margin: 0px auto 0px;
 }
 .block {
     display: flex;
@@ -332,6 +334,7 @@
     width: 100%;
     height: 70px;
     display: -webkit-flex;
+    margin: 0px auto 0px;
 }
 
 .undertxt {
