--- a/CSS/style.css
+++ b/CSS/style.css
@@ -146,8 +146,15 @@
     width: 100%;
     display: -webkit-flex;
     flex-direction: row;
-    margin: 100px auto 0px;
+    margin: 100px 20% 20% 0px;
 }
+
+.footer_center {
+    margin-left: 20%;
+    margin-right: 20%;
+    align-items: center;
+}
+
 .block {
     display: flex;
     margin: 0 10px;
