--- a/CSS/style.css
+++ b/CSS/style.css
@@ -92,7 +92,19 @@
     width: 100%;
     position: relative;
 }
+.main pre {
+    position: absolute;
+    bottom: 0%;
+    right: 15%;
 
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    text-align: right;
+    color: rgba(31, 32, 65, 0.75);
+}
 .window {
     position: absolute;
     width: 380px;
